# qa_documents_modeling

./: .gitignore  README.md  pyproject.toml
src/qa_documents_modeling/: __init__.py  constants.py  modeling_configs.py
src/qa_documents_modeling/data_sets/: create_data_from_file.py  format_mistral_data.py
src/qa_documents_modeling/embeddings/: calculation.py
src/qa_documents_modeling/evals/: evaluations.py
src/qa_documents_modeling/model_creation/: fine_tune_mistral.py
src/qa_documents_modeling/nlp/: chunk_strategies.py
src/qa_documents_modeling/pipelines/: execution.py  modeling_pipeline.py
src/qa_documents_modeling/rag/: emb_db.py  fine_tune.py  llm.py
src/qa_documents_modeling/utils/: file_management.py  utils.py
